0025412: BRepMesh_FastDiscretFace::tryToInsertAnalyticVertex() - fix invalid comparison

Remove unused field BRepMesh_FastDiscretFace::myWithShare.
Remove "virtual" from method of class <anonymous>::FixedVExplorer.